# Flag_Predictor

./: .gitignore  QUICK_START.md  README.md  clear_and_regenerate_cache.py  download_wallingford_rainfall.py  download_wallingford_stations.py  find_hydrology_ids.py  generate_all_location_figures.py  get_rainfall_forecast.py  list_rainfall_stations.py  pyproject.toml  requirements.txt  show_training_diagnostics.py
.github/workflows/: deploy_notebook.yml  update_figures.yml
_layouts/: default.html
data/: forecast_rain_godstow.csv  forecast_rain_godstow_ecmwf_aifs025.csv  forecast_rain_godstow_ecmwf_ifs025.csv  forecast_rain_godstow_icon_d2_eps.csv  forecast_rain_godstow_icon_eu_eps.csv  forecast_rain_godstow_ukmo_uk_ensemble_2km.csv  godstow_differential_kalman_filtered.csv  isis_differential_kalman_filtered.csv  prediction_input_last_month.csv
docs/: .gitkeep  CNAME  _config.yml  index.md  robots.txt  sitemap.xml
docs/_includes/: head-custom.html
models/: config_experiment_2026_01_godstow.pkl  config_experiment_2026_01_isis.pkl  config_experiment_2026_01_wallingford.pkl  config_isis_latest.pkl  config_latest.pkl  multihorizon_model_experiment_2026_01_godstow.pth  multihorizon_model_experiment_2026_01_isis.pth  multihorizon_model_godstow_latest.pth  multihorizon_model_isis_latest.pth  multihorizon_model_latest.pth  multihorizon_model_wallingford_latest.pth  scaler_experiment_2026_01_godstow.pkl  scaler_experiment_2026_01_isis.pkl  scaler_experiment_2026_01_wallingford.pkl  scaler_isis_latest.pkl  scaler_latest.pkl
notebooks/: all_locations_visualization.ipynb  get_diff_data.ipynb  new_plot.ipynb  visualization.ipynb
notebooks/old/: jameson_diff_to_flag.ipynb  kalman_filter.ipynb  multihorizon_predictions.ipynb  multihorizon_predictions_backup.ipynb
src/flag_predictor/: __init__.py  __main__.py  cli.py  config.py  pipeline.py
src/flag_predictor/data/: __init__.py  api.py  download_flow.py  download_groundwater.py  download_level.py  download_rainfall.py  loader.py
src/flag_predictor/models/: __init__.py  lstm.py  training.py
src/flag_predictor/prediction/: __init__.py  (+1 more)
(+3 files in other folders)
